[package]
name = "shortcuts"
version = "0.0.0"
description = "A Tauri Shortcuts App"
authors = ["tihomir-selak"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shortcuts_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.15", features = [] }
tauri-cli = "2.0.0-beta.17"

[dependencies]
tauri = { version = "2.0.0-beta.19", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser", "wincon", "handleapi"] }
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
